2007-05-17  Werner Koch  <wk@g10code.com>

	* src/installer.nsi (AddToPath,RemoveFromPath): New.
	* src/inst-gpa.nsi: Install gpgwrap for gpa.
	* src/inst-gnupg.nsi: Install gpgwrap for gpg, gpgv and gpgsplit.
	
	* src/gpgwrap.c: New.

	* configure.ac: Check for strip.
	(AC_CONFIG_HEADER): New.
	* src/Makefile.am (g4wihelp.dll): Strip.
	(gpgwrap.exe): Build.

2007-05-16  Werner Koch  <wk@g10code.com>

	* src/inst-gtk+.nsi: Install new themes and the engines.  Update
	to gtk 2.10.
	* src/uninst-gtk+.nsi: Likewise.

	* src/inst-pango.nsi: Adjust for Pango 1.16.

	* configure.ac: New package Cairo as reguired by the current Gtk+.
	* src/uninst-cairo.nsi, src/inst-cairo.nsi: New.
	* src/inst-sections.nsi: Install Cairo.
	* include/config.nsi.in: Ditto.

	* src/uninst-gnupg.nsi: Delete gnupg.nls directory.

2007-03-09  Werner Koch  <wk@g10code.com>

	Released 1.0.9.

	* src/Makefile.am: Fixed syntax error in gnupg post install.
	(EXTRA_DIST): Add english manual installation files.

	* packages/packages.current: Replaced sourceforge download site
	by the g10code mirror.  Updated WinPT, GPA and GnupG.

2007-02-26  Werner Koch  <wk@g10code.com>

	* configure.ac: Require msgfmt.
	* src/inst-gnupg.nsi: Install the German translation.
	* src/Makefile.am (gpg4win_pkg_gnupg_post_install): Create mo files.

2006-12-06  Werner Koch  <wk@g10code.com>

	Released 1.0.8.

	* autogen.sh: Add option --force.

	* src/Makefile.am: GnuPG man pages are now below share.
	* src/inst-gnupg.nsi: Ditto

2006-12-04  Werner Koch  <wk@g10code.com>

	* src/Makefile.am (gpg4win_ipkgs): Add english manuals.

	* autogen.sh <build-w32>: Disable the english manuals for now.

2006-11-30  Werner Koch  <wk@g10code.com>

	* include/config.nsi.in: Add definitions for the english manuals.
	* configure.ac: Adjusted name of manual directory.
	* src/inst-man_novice_de.nsi: Ditto.
	* src/inst-man_advanced_de.nsi: Ditto.
	* src/inst-man_advanced_en.nsi: New.
	* src/inst-man_novice_en.nsi: New.